html css home ride services

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <a href="#" class="logo"><img src="/Car Rentel Website Images//img/jeep.png" alt=""></a>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
-            <li><a href="#home">Ride</a></li>
-            <li><a href="#home">Services</a></li>
+            <li><a href="#Ride">Ride</a></li>
+            <li><a href="#Services">Services</a></li>
             <li><a href="#home">About</a></li>
             <li><a href="#home">Reviews</a></li>
         </ul>
@@ -23,7 +23,7 @@
             <button href="#" class="Sign-in">Sign In</button>
         </div>
     </header>
-    <section class="home">
+    <section class="home" id="home">
         <div class="text-home">
             <h1><span>Looking</span> to <br> rent a car</h1>
             <p>Lorem ipsum dolor sit amet  adipisicing <br> elit Libero, nam voluptatum.</p>
@@ -48,6 +48,92 @@
                 </div>
                 <button>Submit</button>
             </form>
+        </div>
+    </section>
+    <section class="Ride" id="Ride">
+        <div class="heading">
+            <p>HOW ITS WORK</p>
+            <h1>Rent With 3 Easy Steps</h1>
+        </div>
+        <div class="box-container">
+            <div class="box">
+                <i class="fa-solid fa-location-dot"></i>
+                <h3>Choose A Location</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente esse cum nisi animi quae harum.</p>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-calendar-check" id="calendar"></i>
+                <h3>Choose A Location</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente esse cum nisi animi quae harum.</p>
+            </div>
+            <div class="box">
+                <i class="fa-solid fa-location-dot"></i>
+                <h3>Choose A Location</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente esse cum nisi animi quae harum.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="services" id="Services">
+        <div class="heading">
+            <p>best services</p>
+            <h1>Explore Out Top Deals <br> From Top Rated Dealers</h1>
+        </div>
+        <div class="container-images">
+            <div class="box">
+                <div class="img">
+                    <img src="/Car Rentel Website Images//img/car1.jpg" alt="">
+                </div>
+                    <a href="#">2017</a>
+                    <p>2018 Honda Civic</p>
+                    <h3>Prix Fix : $56464 </h3>   
+                    <button>Rent Now</button> 
+            </div>
+            <div class="box">
+                <div class="img">
+                    <img src="/Car Rentel Website Images//img/car2.jpg" alt="">
+                </div>
+                    <a href="#">2017</a>
+                    <p>2018 Honda Civic</p>
+                    <h3>Prix Fix : $56464 </h3>    
+                    <button>Rent Now</button> 
+            </div>
+            <div class="box">
+                <div class="img">
+                    <img src="/Car Rentel Website Images//img/car3.jpg" alt="">
+                </div>
+                    <a href="#">2017</a>
+                    <p>2018 Honda Civic</p>
+                    <h3>Prix Fix : $56464</h3>    
+                    <button>Rent Now</button> 
+            </div>
+            <div class="box">
+                <div class="img">
+                    <img src="/Car Rentel Website Images//img/car4.jpg" alt="">
+                </div>
+                    <a href="#">2017</a>
+                    <p>2018 Honda Civic</p>
+                    <h3>Prix Fix : $56464</h3>    
+                    <button>Rent Now</button> 
+            </div>
+            <div class="box">
+                <div class="img">
+                    <img src="/Car Rentel Website Images//img/car5.jpg" alt="">
+                </div>
+                    <a href="#">2017</a>
+                    <p>2018 Honda Civic</p>
+                    <h3>Prix Fix : $56464 </h3>    
+                    <button>Rent Now</button> 
+            </div>
+            <div class="box">
+                <div class="img">
+                    <img src="/Car Rentel Website Images//img/car6.jpg" alt="">
+                </div>
+                    <a href="#">2017</a>
+                    <p>2018 Honda Civic</p>
+                    <h3>Prix Fix : $56464 </h3>    
+                    <button>Rent Now</button> 
+            </div>
         </div>
     </section>
     <script src="main.js"></script>
