html css home ride services

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 <body>
     <header>
         <a href="#" class="logo"><img src="/Car Rentel Website Images//img/jeep.png" alt=""></a>
+        <div class="hamburger-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
             <li><a href="#Ride">Ride</a></li>
             <li><a href="#Services">Services</a></li>
-            <li><a href="#home">About</a></li>
-            <li><a href="#home">Reviews</a></li>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Reviews">Reviews</a></li>
         </ul>
         <div class="box-signup">
             <button href="#" class="Sign-up">Sign Up</button>
@@ -25,7 +30,7 @@
     </header>
     <section class="home" id="home">
         <div class="text-home">
-            <h1><span>Looking</span> to <br> rent a car</h1>
+            <h1><span>We have a variety of</span> <br> cars in our store</h1>
             <p>Lorem ipsum dolor sit amet  adipisicing <br> elit Libero, nam voluptatum.</p>
             <div class="box-app">
                 <img src="/Car Rentel Website Images//img/ios.png" alt="">
@@ -82,7 +87,7 @@
         <div class="container-images">
             <div class="box">
                 <div class="img">
-                    <img src="/Car Rentel Website Images//img/car1.jpg" alt="">
+                    <img src="/img/car6.jpg" alt="">
                 </div>
                     <a href="#">2017</a>
                     <p>2018 Honda Civic</p>
@@ -118,7 +123,7 @@
             </div>
             <div class="box">
                 <div class="img">
-                    <img src="/Car Rentel Website Images//img/car5.jpg" alt="">
+                    <img src="/img/car1.jpg" alt="">
                 </div>
                     <a href="#">2017</a>
                     <p>2018 Honda Civic</p>
@@ -133,6 +138,29 @@
                     <p>2018 Honda Civic</p>
                     <h3>Prix Fix : $56464 </h3>    
                     <button>Rent Now</button> 
+            </div>
+        </div>
+    </section>
+    <section class="About" id="About">
+        <div class="heading">
+            <p>about us</p>
+            <h1>Best Customer Expirience</h1>
+        </div>
+        <div class="container-about">
+            <div class="about-image">
+                <img src="/Car Rentel Website Images//img/about.png">
+            </div>
+            <div class="about-text">
+                <h4>about us</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Deserunt debitis quisquam error consectetur recusandae 
+                    quo nisi placeat. Qui dignissimos quisquam minima eius,
+                    maiores aut odio. Iste quae neque architecto repellat!
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Accusamus reiciendis ratione placeat veritatis.
+                </p>
+                <a href="#">Learn More</a>
             </div>
         </div>
     </section>
